<resources>
    <string name="app_name">cookBook</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="read_recipes_fragment_label">Read Recipes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello">Hello!</string>
    <string name="hello2">Let\'s get cooking!</string>
    <string name="tvRead">Read Recipes</string>
    <string name="tvWrite">Write Recipes</string>
    <string name="btnRead">button read</string>
    <string name="btnWrite">button write</string>
    <string name="writeRecipes">Write Recipes</string>
    <string name="choose_dish">Main Dishes</string>
    <string name="et_insert_recipe_title">Insert the title of your recipe</string>
    <string name="title">Please Insert the title of your recipe!</string>
    <string name="btn_confirm">Confirm</string>
    <string name="insert_your_title_please">Insert your title please:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_shown">Recipes shown</string>
</resources>